# image-converter

./: Dockerfile  README.md  docker-compose.yml.example  pyproject.toml
.github/workflows/: docker.yaml  linting.yaml
nginx/conf.d/: converter.conf
resources/: entrypoint.sh
website/converter/: asgi.py  urls.py  wsgi.py
website/converter/api/: urls.py
website/converter/api/v1/: renderers.py  serializers.py  urls.py  views.py
website/converter/settings/: development.py  production.py  settings.py
website/converter/templates/converter/: swagger.html
